--- a/app/src/main/res/drawable/ic_html.xml
+++ b/app/src/main/res/drawable/ic_html.xml
@@ -1,27 +1,10 @@
-<!--
-  ~  Copyright (C) 2023  WirelessAlien <https://github.com/WirelessAlien>
-  ~
-  ~     This program is free software: you can redistribute it and/or modify
-  ~     it under the terms of the GNU General Public License as published by
-  ~     the Free Software Foundation, either version 3 of the License, or
-  ~     any later version.
-  ~
-  ~     This program is distributed in the hope that it will be useful,
-  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
-  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-  ~     GNU General Public License for more details.
-  ~
-  ~     You should have received a copy of the GNU General Public License
-  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
-  -->
-
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="200dp"
-    android:height="200dp"
-    android:viewportWidth="512"
-    android:viewportHeight="512"
+    android:width="25.6dp"
+    android:height="31dp"
+    android:viewportWidth="25.6"
+    android:viewportHeight="31"
     android:tint="?attr/colorControlNormal">
   <path
-      android:pathData="M458,118.2L346.5,8.4C345,6.9 342.9,6 340.7,6H135c-31.1,0 -56.3,26.6 -56.3,59.4v219.2H51.3v148.6h27.4v13.4c0,32.7 25.3,59.4 56.3,59.4h269.4c31.1,0 56.3,-26.6 56.3,-59.4V124.7C460.7,122.3 459.8,119.9 458,118.2zM337.9,24.4l97,95.6h-52.8c-24.4,0 -44.2,-19.5 -44.2,-43.4V24.4zM87.9,391.4H77.1v-65h10.8V355H117v-28.6h10.8v65H117v-27.7H87.9V391.4zM443.7,446.6c0,22.9 -17.6,41.5 -39.3,41.5H135c-21.7,0 -39.3,-18.6 -39.3,-41.5v-13.4h187c36.5,0 66,-33.3 66,-74.3v0c0,-41 -29.6,-74.3 -66,-74.3h-187V65.4c0,-22.9 17.6,-41.5 39.3,-41.5h185.9v52.7c0,33.8 27.4,61.3 61.2,61.3h61.6V446.6zM137.6,335.1v-8.7h50.7v8.7h-20.1v56.3h-10.8v-56.3H137.6zM254,344.7l-17.9,46.7h-7.5l-18.2,-47.6l-0.3,0.1v47.5h-10.8v-65h14.2l18.7,50h0.3l18.8,-50h13.8v65h-10.8v-46.7L254,344.7zM322.9,382.7v8.7h-41.3v-65h10.8v56.3H322.9z"
-      android:fillColor="#ED1C24"/>
+      android:pathData="M25.1,31a0.5,0.5 0,0 1,-0.5 -0.5L24.6,8.68l-6.73,-7.68L4.1,1a2.5,2.5 0,0 0,-2.5 2.5v7a0.5,0.5 0,0 1,-1 0v-7a3.5,3.5 0,0 1,3.5 -3.5L18.33,-0l7.27,8.31L25.6,30.5A0.5,0.5 0,0 1,25.1 31ZM23.1,8.95a0.5,0.5 0,0 0,-0.5 -0.5L19.39,8.45a0.79,0.79 0,0 1,-0.79 -0.79L18.6,3.78a0.5,0.5 0,0 0,-1 0v3.86a1.79,1.79 0,0 0,1.79 1.79L22.6,9.43A0.5,0.5 0,0 0,23.1 8.95ZM0,21.79v-5a0.21,0.21 0,0 1,0.13 -0.19,0.67 0.67,0 0,1 0.3,-0.06 0.73,0.73 0,0 1,0.3 0.06,0.22 0.22,0 0,1 0.12,0.19L0.85,18.95h2L2.85,16.83a0.21,0.21 0,0 1,0.13 -0.19,0.67 0.67,0 0,1 0.3,-0.06 0.73,0.73 0,0 1,0.3 0.06,0.22 0.22,0 0,1 0.12,0.19v5a0.21,0.21 0,0 1,-0.12 0.19,0.6 0.6,0 0,1 -0.3,0.07 0.58,0.58 0,0 1,-0.3 -0.07,0.22 0.22,0 0,1 -0.13,-0.19L2.85,19.53h-2v2.26a0.21,0.21 0,0 1,-0.12 0.19,0.68 0.68,0 0,1 -0.6,0A0.22,0.22 0,0 1,0 21.79ZM4.33,16.95a0.52,0.52 0,0 1,0.07 -0.25,0.25 0.25,0 0,1 0.21,-0.11h3.32a0.23,0.23 0,0 1,0.21 0.11,0.47 0.47,0 0,1 0,0.51 0.21,0.21 0,0 1,-0.2 0.11L6.7,17.32v4.48a0.2,0.2 0,0 1,-0.13 0.19,0.56 0.56,0 0,1 -0.3,0.07 0.6,0.6 0,0 1,-0.3 -0.07,0.21 0.21,0 0,1 -0.12,-0.19L5.85,17.31L4.61,17.31a0.22,0.22 0,0 1,-0.2 -0.11A0.45,0.45 0,0 1,4.33 16.95ZM8.85,21.8L8.85,16.95a0.35,0.35 0,0 1,0.12 -0.3,0.44 0.44,0 0,1 0.3,-0.1 0.69,0.69 0,0 1,0.38 0.09,1 1,0 0,1 0.3,0.36l1.12,2 1.13,-2a1,1 0,0 1,0.29 -0.36,0.71 0.71,0 0,1 0.38,-0.09 0.44,0.44 0,0 1,0.3 0.1,0.35 0.35,0 0,1 0.12,0.3v4.81a0.21,0.21 0,0 1,-0.12 0.19,0.6 0.6,0 0,1 -0.3,0.07 0.58,0.58 0,0 1,-0.3 -0.07,0.22 0.22,0 0,1 -0.13,-0.19L12.44,18.2L11.37,20.05a0.36,0.36 0,0 1,-0.31 0.18,0.31 0.31,0 0,1 -0.29,-0.18L9.7,18.15v3.64a0.2,0.2 0,0 1,-0.13 0.19,0.56 0.56,0 0,1 -0.3,0.07 0.54,0.54 0,0 1,-0.29 -0.07A0.2,0.2 0,0 1,8.85 21.79ZM14.35,21.8v-5a0.22,0.22 0,0 1,0.12 -0.19,0.78 0.78,0 0,1 0.6,0 0.22,0.22 0,0 1,0.12 0.19L15.19,21.35h2.08a0.21,0.21 0,0 1,0.19 0.11,0.4 0.4,0 0,1 0.07,0.24 0.41,0.41 0,0 1,-0.07 0.25,0.21 0.21,0 0,1 -0.19,0.1L14.72,22.05a0.44,0.44 0,0 1,-0.26 -0.07A0.2,0.2 0,0 1,14.35 21.79Z"
+      android:fillColor="#428dff"/>
 </vector>
