--- a/app/src/main/res/drawable/ic_unknown.xml
+++ b/app/src/main/res/drawable/ic_unknown.xml
@@ -1,10 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="960"
-    android:viewportHeight="960"
+    android:width="24.95dp"
+    android:height="31dp"
+    android:viewportWidth="24.95"
+    android:viewportHeight="31"
     android:tint="?attr/colorControlNormal">
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M240,880q-33,0 -56.5,-23.5T160,800v-640q0,-33 23.5,-56.5T240,80h287q16,0 30.5,6t25.5,17l194,194q11,11 17,25.5t6,30.5v447q0,33 -23.5,56.5T720,880L240,880ZM520,320v-160L240,160v640h480v-440L560,360q-17,0 -28.5,-11.5T520,320ZM240,160v200,-200 640,-640Z"/>
+      android:pathData="M24.5,31a0.5,0.5 0,0 1,-0.5 -0.5L24,8.68l-6.73,-7.68L3.5,1a2.5,2.5 0,0 0,-2.5 2.5v7a0.5,0.5 0,0 1,-1 0v-7a3.5,3.5 0,0 1,3.5 -3.5L17.68,-0l7.27,8.31L24.95,30.5A0.5,0.5 0,0 1,24.5 31ZM22.5,8.95a0.5,0.5 0,0 0,-0.5 -0.5L18.74,8.45a0.78,0.78 0,0 1,-0.79 -0.78L17.95,3.78a0.5,0.5 0,0 0,-1 0v3.86a1.79,1.79 0,0 0,1.79 1.78h3.21A0.5,0.5 0,0 0,22.5 8.95ZM6.68,21.71a0.49,0.49 0,0 0,0.34 -0.12,0.38 0.38,0 0,0 0.15,-0.29 0.35,0.35 0,0 0,-0.15 -0.29,0.49 0.49,0 0,0 -0.34,-0.12 0.51,0.51 0,0 0,-0.35 0.12,0.37 0.37,0 0,0 -0.14,0.29 0.38,0.38 0,0 0,0.14 0.29A0.51,0.51 0,0 0,6.68 21.71ZM8.16,21.71a0.52,0.52 0,0 0,0.34 -0.12,0.4 0.4,0 0,0 0.14,-0.29 0.37,0.37 0,0 0,-0.14 -0.29,0.52 0.52,0 0,0 -0.34,-0.12 0.54,0.54 0,0 0,-0.36 0.12,0.37 0.37,0 0,0 -0.14,0.29 0.38,0.38 0,0 0,0.14 0.29A0.54,0.54 0,0 0,8.16 21.71ZM9.63,21.71a0.52,0.52 0,0 0,0.34 -0.12,0.4 0.4,0 0,0 0.14,-0.29 0.37,0.37 0,0 0,-0.14 -0.29,0.52 0.52,0 0,0 -0.34,-0.12 0.51,0.51 0,0 0,-0.35 0.12,0.34 0.34,0 0,0 -0.14,0.29 0.35,0.35 0,0 0,0.14 0.29A0.51,0.51 0,0 0,9.63 21.71Z"
+      android:fillColor="#428dff"/>
 </vector>
