--- a/app/src/main/res/layout/progress_dialog_archive.xml
+++ b/app/src/main/res/layout/progress_dialog_archive.xml
@@ -26,7 +26,7 @@
         android:id="@+id/progressText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Archiving..."
+        android:text="@string/archiving"
         android:textSize="18sp" />
 
     <com.google.android.material.progressindicator.LinearProgressIndicator
@@ -48,9 +48,8 @@
             android:id="@+id/cancelButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             app:cornerRadius="5dp"
-            style="@style/Widget.Material3.Button.IconButton"
+            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
             android:layout_marginEnd="10dp"
             app:icon="@drawable/ic_round_cancel"/>
 
@@ -60,9 +59,9 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_toEndOf="@id/cancelButton"
+            style="@style/Widget.Material3.Button.TonalButton"
             app:cornerRadius="5dp"
             android:layout_marginStart="10dp"
-            android:layout_weight="1"
-            android:text="Background" />
+            android:text="@string/background" />
     </RelativeLayout>
 </LinearLayout>
