--- a/app/src/main/res/drawable/ic_db.xml
+++ b/app/src/main/res/drawable/ic_db.xml
@@ -1,36 +1,10 @@
-<!--
-  ~  Copyright (C) 2023  WirelessAlien <https://github.com/WirelessAlien>
-  ~
-  ~     This program is free software: you can redistribute it and/or modify
-  ~     it under the terms of the GNU General Public License as published by
-  ~     the Free Software Foundation, either version 3 of the License, or
-  ~     any later version.
-  ~
-  ~     This program is distributed in the hope that it will be useful,
-  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
-  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-  ~     GNU General Public License for more details.
-  ~
-  ~     You should have received a copy of the GNU General Public License
-  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
-  -->
-
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="200dp"
-    android:height="200dp"
-    android:viewportWidth="512"
-    android:viewportHeight="512"
+    android:width="24.95dp"
+    android:height="31dp"
+    android:viewportWidth="24.95"
+    android:viewportHeight="31"
     android:tint="?attr/colorControlNormal">
   <path
-      android:pathData="M247.3,349.7c2.4,-2 3.6,-4.7 3.6,-8.3c0,-4 -1.3,-6.9 -3.8,-8.8c-2.5,-1.9 -6.2,-2.9 -11,-2.9h-12.9v23h14.3C241.6,352.6 244.9,351.6 247.3,349.7z"
-      android:fillColor="#ED1C24"/>
-  <path
-      android:pathData="M157.5,329.6h-13.1v58.6h13.1c6.4,0 11.5,-2.2 15.3,-6.5c3.8,-4.3 5.7,-9.9 5.7,-16.7v-12.3c0,-6.7 -1.9,-12.3 -5.7,-16.6C169,331.8 163.9,329.6 157.5,329.6z"
-      android:fillColor="#ED1C24"/>
-  <path
-      android:pathData="M241.6,362.5h-0.7h-17.7v25.7h18c4.6,0 8.2,-1.1 10.7,-3.2c2.5,-2.1 3.7,-5.2 3.7,-9.1c0,-4 -1.2,-7.2 -3.7,-9.6C249.4,363.9 246,362.7 241.6,362.5z"
-      android:fillColor="#ED1C24"/>
-  <path
-      android:pathData="M458,118.2L346.5,8.4C345,6.9 342.9,6 340.7,6H135c-31.1,0 -56.3,26.6 -56.3,59.4v219.2H51.3v148.6h27.4v13.4c0,32.7 25.3,59.4 56.3,59.4h269.4c31.1,0 56.3,-26.6 56.3,-59.4V124.7C460.7,122.3 459.8,119.9 458,118.2zM337.9,24.4l97,95.6h-52.8c-24.4,0 -44.2,-19.5 -44.2,-43.4V24.4zM443.7,446.6c0,22.9 -17.6,41.5 -39.3,41.5H135c-21.7,0 -39.3,-18.6 -39.3,-41.5v-13.4h187c36.5,0 66,-33.3 66,-74.3v0c0,-41 -29.6,-74.3 -66,-74.3h-187V65.4c0,-22.9 17.6,-41.5 39.3,-41.5h185.9v52.7c0,33.8 27.4,61.3 61.2,61.3h61.6V446.6zM131.1,398.9v-80h26.4c10.1,0 18.4,3.2 24.8,9.5c6.4,6.3 9.5,14.5 9.5,24.5V365c0,10 -3.2,18.2 -9.5,24.5c-6.4,6.3 -14.6,9.5 -24.8,9.5H131.1zM264.7,363.3c2.8,3.6 4.1,7.8 4.1,12.6c0,7.5 -2.5,13.2 -7.4,17.1c-4.9,3.9 -11.7,5.9 -20.3,5.9h-31.4v-80H236c8.8,0 15.7,1.8 20.7,5.5c5,3.6 7.5,9.1 7.5,16.3c0,3.5 -1,6.7 -3,9.5c-2,2.8 -4.8,5 -8.3,6.4C258,357.5 262,359.7 264.7,363.3z"
-      android:fillColor="#ED1C24"/>
+      android:pathData="M24.5,31a0.5,0.5 0,0 1,-0.5 -0.5L24,8.68l-6.73,-7.68L3.5,1a2.5,2.5 0,0 0,-2.5 2.5v7a0.5,0.5 0,0 1,-1 0v-7a3.5,3.5 0,0 1,3.5 -3.5L17.68,-0l7.27,8.31L24.95,30.5A0.5,0.5 0,0 1,24.5 31ZM22.5,8.95a0.5,0.5 0,0 0,-0.5 -0.5L18.74,8.45a0.79,0.79 0,0 1,-0.79 -0.79L17.95,3.78a0.5,0.5 0,0 0,-1 0v3.86a1.79,1.79 0,0 0,1.79 1.79h3.21A0.5,0.5 0,0 0,22.5 8.95ZM2.02,21.02a0.42,0.42 0,0 1,0.11 -0.28,0.3 0.3,0 0,1 0.25,-0.14 0.42,0.42 0,0 1,0.22 0.09c0.08,0.07 0.16,0.13 0.24,0.21a1.42,1.42 0,0 0,0.36 0.21,1.63 1.63,0 0,0 0.55,0.09 1.22,1.22 0,0 0,0.73 -0.2,0.7 0.7,0 0,0 0.28,-0.6 0.77,0.77 0,0 0,-0.27 -0.6,1.89 1.89,0 0,0 -0.65,-0.38l-0.76,-0.31a1.67,1.67 0,0 1,-0.65 -0.5,1.27 1.27,0 0,1 -0.27,-0.83 1.34,1.34 0,0 1,0.16 -0.68,1.08 1.08,0 0,1 0.45,-0.45 2.13,2.13 0,0 1,0.59 -0.23,2.7 2.7,0 0,1 0.65,-0.07l0.45,0a3.89,3.89 0,0 1,0.47 0.09,1.21 1.21,0 0,1 0.38,0.17 0.31,0.31 0,0 1,0.15 0.25,0.55 0.55,0 0,1 -0.09,0.29 0.31,0.31 0,0 1,-0.26 0.14,0.63 0.63,0 0,1 -0.21,-0.07 2.34,2.34 0,0 0,-0.37 -0.15,2 2,0 0,0 -0.52,-0.07 1.38,1.38 0,0 0,-0.73 0.17,0.57 0.57,0 0,0 -0.27,0.52 0.6,0.6 0,0 0,0.14 0.39,1.29 1.29,0 0,0 0.37,0.26l0.51,0.21c0.19,0.07 0.37,0.15 0.56,0.24a2.8,2.8 0,0 1,0.5 0.31,1.25 1.25,0 0,1 0.37,0.49 1.58,1.58 0,0 1,0.15 0.71,1.43 1.43,0 0,1 -0.5,1.18 2.05,2.05 0,0 1,-1.33 0.41A2.57,2.57 0,0 1,2.5 21.62Q2.02,21.33 2.02,21.02ZM6.35,20.22L6.35,18.04a1.54,1.54 0,0 1,0.49 -1.27,2.33 2.33,0 0,1 2.61,0 1.54,1.54 0,0 1,0.49 1.27v2.18a1.62,1.62 0,0 1,-0.4 1.19,1.74 1.74,0 0,1 -1.11,0.47v0.52a0.26,0.26 0,0 1,-0.08 0.19,0.31 0.31,0 0,1 -0.21,0.07 0.26,0.26 0,0 1,-0.19 -0.07,0.23 0.23,0 0,1 -0.09,-0.19v-0.52a1.76,1.76 0,0 1,-1.1 -0.46A1.63,1.63 0,0 1,6.35 20.22ZM7.2,20.22c0,0.53 0.22,0.84 0.66,0.92v-0.46c0,-0.16 0.1,-0.25 0.28,-0.25a0.37,0.37 0,0 1,0.21 0.06,0.26 0.26,0 0,1 0.08,0.19v0.45a0.8,0.8 0,0 0,0.67 -0.91L9.1,18.04a1,1 0,0 0,-0.25 -0.73,1 1,0 0,0 -0.71,-0.23 0.84,0.84 0,0 0,-0.94 1ZM10.94,21.58v-5a0.22,0.22 0,0 1,0.12 -0.2,0.78 0.78,0 0,1 0.6,0 0.22,0.22 0,0 1,0.12 0.2v4.51h2.08a0.21,0.21 0,0 1,0.19 0.11,0.4 0.4,0 0,1 0.07,0.24 0.41,0.41 0,0 1,-0.07 0.25,0.21 0.21,0 0,1 -0.19,0.11L11.31,21.8a0.45,0.45 0,0 1,-0.26 -0.08A0.2,0.2 0,0 1,10.94 21.58Z"
+      android:fillColor="#428dff"/>
 </vector>
