--- a/app/src/main/res/drawable/ic_doc.xml
+++ b/app/src/main/res/drawable/ic_doc.xml
@@ -1,33 +1,10 @@
-<!--
-  ~  Copyright (C) 2023  WirelessAlien <https://github.com/WirelessAlien>
-  ~
-  ~     This program is free software: you can redistribute it and/or modify
-  ~     it under the terms of the GNU General Public License as published by
-  ~     the Free Software Foundation, either version 3 of the License, or
-  ~     any later version.
-  ~
-  ~     This program is distributed in the hope that it will be useful,
-  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
-  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-  ~     GNU General Public License for more details.
-  ~
-  ~     You should have received a copy of the GNU General Public License
-  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
-  -->
-
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="200dp"
-    android:height="200dp"
-    android:viewportWidth="512"
-    android:viewportHeight="512"
+    android:width="24.95dp"
+    android:height="31dp"
+    android:viewportWidth="24.95"
+    android:viewportHeight="31"
     android:tint="?attr/colorControlNormal">
   <path
-      android:pathData="M124.8,332.2h-11.9v53.4h11.9c5.8,0 10.5,-2 13.9,-5.9c3.4,-4 5.2,-9 5.2,-15.2v-11.2c0,-6.1 -1.7,-11.2 -5.2,-15.1C135.3,334.2 130.7,332.2 124.8,332.2z"
-      android:fillColor="#ED1C24"/>
-  <path
-      android:pathData="M199.6,386.4c5.6,0 10,-2 13.2,-5.9c3.2,-3.9 4.8,-8.9 4.8,-15.1v-13.2c0,-6.1 -1.6,-11.1 -4.9,-15c-3.2,-3.9 -7.6,-5.9 -13.2,-5.9c-5.4,0 -9.6,2 -12.7,5.9c-3.1,3.9 -4.6,8.9 -4.6,15v13.2c0,6.1 1.6,11.2 4.7,15.1C190,384.5 194.2,386.4 199.6,386.4z"
-      android:fillColor="#ED1C24"/>
-  <path
-      android:pathData="M458,118.2L346.5,8.4C345,6.9 342.9,6 340.7,6H135c-31.1,0 -56.3,26.6 -56.3,59.4v219.2H51.3v148.6h27.4v13.4c0,32.7 25.3,59.4 56.3,59.4h269.4c31.1,0 56.3,-26.6 56.3,-59.4V124.7C460.7,122.3 459.8,119.9 458,118.2zM337.9,24.4l97,95.6h-52.8c-24.4,0 -44.2,-19.5 -44.2,-43.4V24.4zM443.7,446.6c0,22.9 -17.6,41.5 -39.3,41.5H135c-21.7,0 -39.3,-18.6 -39.3,-41.5v-13.4h187c36.5,0 66,-33.3 66,-74.3s-29.6,-74.3 -66,-74.3h-187V65.4c0,-22.9 17.6,-41.5 39.3,-41.5h185.9v52.7c0,33.8 27.4,61.3 61.2,61.3h61.6V446.6zM100.7,395.4v-72.9h24.1c9.2,0 16.8,2.9 22.6,8.7c5.8,5.8 8.7,13.2 8.7,22.3v11.1c0,9.1 -2.9,16.5 -8.7,22.3c-5.8,5.7 -13.3,8.6 -22.6,8.6H100.7zM170.1,365.5v-13.1c0,-8.9 2.7,-16.3 8.2,-22.1c5.5,-5.9 12.6,-8.8 21.3,-8.8c8.9,0 16.2,2.9 21.8,8.8c5.6,5.9 8.4,13.3 8.4,22.1v13.1c0,8.9 -2.8,16.3 -8.4,22.2c-5.6,5.9 -12.9,8.8 -21.8,8.8c-8.7,0 -15.8,-2.9 -21.3,-8.8C172.8,381.8 170.1,374.4 170.1,365.5zM260.1,380.8c2.9,3.9 6.9,5.9 12,5.9c5,0 8.8,-1.3 11.3,-3.9c2.6,-2.6 3.9,-6.4 3.9,-11.3H299l0.1,0.3c0.1,7.3 -2.3,13.3 -7.2,17.8c-4.9,4.5 -11.5,6.8 -19.9,6.8c-8.5,0 -15.4,-2.9 -20.6,-8.6c-5.3,-5.7 -7.9,-13 -7.9,-22V352c0,-8.9 2.6,-16.2 7.8,-22c5.2,-5.8 12,-8.6 20.4,-8.6c8.6,0 15.3,2.2 20.3,6.6c4.9,4.4 7.3,10.4 7.2,18l-0.1,0.3h-11.8c0,-4.9 -1.3,-8.6 -4,-11.2c-2.6,-2.6 -6.5,-3.9 -11.6,-3.9c-4.9,0 -8.9,2 -11.7,5.9c-2.9,3.9 -4.3,8.9 -4.3,14.8v14C255.7,371.9 257.2,376.9 260.1,380.8z"
-      android:fillColor="#ED1C24"/>
+      android:pathData="M24.5,31a0.5,0.5 0,0 1,-0.5 -0.5L24,8.68l-6.73,-7.68L3.5,1a2.5,2.5 0,0 0,-2.5 2.5v7a0.5,0.5 0,0 1,-1 0v-7a3.5,3.5 0,0 1,3.5 -3.5L17.68,-0l7.27,8.31L24.95,30.5A0.5,0.5 0,0 1,24.5 31ZM22.5,8.95a0.5,0.5 0,0 0,-0.5 -0.5L18.74,8.45a0.79,0.79 0,0 1,-0.79 -0.79L17.95,3.78a0.5,0.5 0,0 0,-1 0v3.86a1.79,1.79 0,0 0,1.79 1.79h3.21A0.5,0.5 0,0 0,22.5 8.95ZM2.13,21.73a0.45,0.45 0,0 0,0.27 0.07h1.41a2,2 0,0 0,1.31 -0.4,1.54 1.54,0 0,0 0.49,-1.27L5.61,18a1.55,1.55 0,0 0,-0.49 -1.27,2 2,0 0,0 -1.31,-0.4L2.4,16.33a0.45,0.45 0,0 0,-0.27 0.07,0.22 0.22,0 0,0 -0.11,0.18v5A0.22,0.22 0,0 0,2.13 21.73ZM2.87,17.03h0.94a0.85,0.85 0,0 1,1 1v2.13a0.84,0.84 0,0 1,-1 1h-0.94ZM7.04,21.45a2,2 0,0 0,1.3 0.4,2.07 2.07,0 0,0 1.31,-0.4 1.55,1.55 0,0 0,0.49 -1.27L10.14,18a1.55,1.55 0,0 0,-0.49 -1.27,2 2,0 0,0 -1.31,-0.4 2,2 0,0 0,-1.3 0.4,1.55 1.55,0 0,0 -0.49,1.27v2.18A1.55,1.55 0,0 0,7.04 21.45ZM7.4,18a0.85,0.85 0,0 1,0.94 -1,0.86 0.86,0 0,1 0.95,1v2.18a0.86,0.86 0,0 1,-0.95 1,0.85 0.85,0 0,1 -0.94,-1ZM11.56,21.45a2,2 0,0 0,1.28 0.4,2.12 2.12,0 0,0 1.33,-0.39 1.24,1.24 0,0 0,0.5 -1,0.42 0.42,0 0,0 -0.1,-0.33 0.57,0.57 0,0 0,-0.33 -0.08c-0.26,0 -0.4,0.08 -0.42,0.26a1.78,1.78 0,0 1,0 0.28,1.65 1.65,0 0,1 -0.11,0.26 0.59,0.59 0,0 1,-0.28 0.23,1.34 1.34,0 0,1 -0.48,0.08 0.87,0.87 0,0 1,-1 -1L11.95,18a0.86,0.86 0,0 1,1 -1c0.6,0 0.91,0.27 0.94,0.8 0,0.18 0.15,0.27 0.43,0.27a0.45,0.45 0,0 0,0.32 -0.09,0.41 0.41,0 0,0 0.1,-0.33 1.18,1.18 0,0 0,-0.5 -1,2.13 2.13,0 0,0 -1.32,-0.38 2,2 0,0 0,-1.28 0.4,1.55 1.55,0 0,0 -0.49,1.27v2.18A1.58,1.58 0,0 0,11.56 21.45Z"
+      android:fillColor="#428dff"/>
 </vector>
