--- a/app/src/main/res/drawable/ic_gif.xml
+++ b/app/src/main/res/drawable/ic_gif.xml
@@ -1,27 +1,10 @@
-<!--
-  ~  Copyright (C) 2023  WirelessAlien <https://github.com/WirelessAlien>
-  ~
-  ~     This program is free software: you can redistribute it and/or modify
-  ~     it under the terms of the GNU General Public License as published by
-  ~     the Free Software Foundation, either version 3 of the License, or
-  ~     any later version.
-  ~
-  ~     This program is distributed in the hope that it will be useful,
-  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
-  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-  ~     GNU General Public License for more details.
-  ~
-  ~     You should have received a copy of the GNU General Public License
-  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
-  -->
-
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="200dp"
-    android:height="200dp"
-    android:viewportWidth="512"
-    android:viewportHeight="512"
+    android:width="63dp"
+    android:height="63dp"
+    android:viewportWidth="63"
+    android:viewportHeight="63"
     android:tint="?attr/colorControlNormal">
   <path
-      android:pathData="M458,118.2L346.5,8.4C345,6.9 342.9,6 340.7,6H135c-31.1,0 -56.3,26.6 -56.3,59.4v219.2H51.3v148.6h27.4v13.4c0,32.7 25.3,59.4 56.3,59.4h269.4c31.1,0 56.3,-26.6 56.3,-59.4V124.7C460.7,122.3 459.8,119.9 458,118.2zM337.9,24.4l97,95.6h-52.8c-24.4,0 -44.2,-19.5 -44.2,-43.4V24.4zM443.7,446.6c0,22.9 -17.6,41.5 -39.3,41.5H135c-21.7,0 -39.3,-18.6 -39.3,-41.5v-13.4h187c36.5,0 66,-33.3 66,-74.3v0c0,-41 -29.6,-74.3 -66,-74.3h-187V65.4c0,-22.9 17.6,-41.5 39.3,-41.5h185.9v52.7c0,33.8 27.4,61.3 61.2,61.3h61.6V446.6zM140.3,381c3.2,3.8 7.4,5.7 12.6,5.7c3.9,0 7,-0.4 9.3,-1.3c2.3,-0.9 4,-2 5.2,-3.2v-15.1H152V358h27.4v27.5c-2,2.8 -5.2,5.4 -9.6,7.6c-4.4,2.2 -10.1,3.3 -17,3.3c-8.6,0 -15.7,-2.8 -21.3,-8.3c-5.6,-5.6 -8.3,-12.7 -8.3,-21.6v-15.2c0,-8.8 2.7,-16 8.1,-21.6c5.4,-5.6 12.3,-8.3 20.7,-8.3c8.5,0 15.1,2.1 19.8,6.4c4.7,4.3 7,9.8 6.9,16.7l-0.2,0.3h-11.6c0,-4.1 -1.3,-7.4 -3.8,-9.9c-2.6,-2.5 -6.2,-3.8 -11,-3.8c-5,0 -9.1,1.9 -12.2,5.7c-3.1,3.8 -4.6,8.6 -4.6,14.4v15.3C135.5,372.4 137.1,377.2 140.3,381zM198.4,395.4v-72.9h12.2v72.9H198.4zM271.5,354.5v9.8h-29.4v31.1H230v-72.9h46.7v9.8h-34.5v22.3H271.5z"
-      android:fillColor="#ED1C24"/>
+      android:pathData="M45,43.71a0.5,0.5 0,0 1,-0.5 -0.5L44.5,21.4l-6.73,-7.69L24,13.71a2.5,2.5 0,0 0,-2.5 2.5v7a0.5,0.5 0,0 1,-1 0v-7a3.5,3.5 0,0 1,3.5 -3.5L38.18,12.71L45.45,21L45.45,43.21A0.5,0.5 0,0 1,45 43.71ZM43,24a0.5,0.5 0,0 0,-0.5 -0.5L39.24,23.5a0.78,0.78 0,0 1,-0.79 -0.78L38.45,18.83a0.5,0.5 0,0 0,-1 0v3.86a1.79,1.79 0,0 0,1.79 1.78h3.21A0.5,0.5 0,0 0,43 24ZM24,36.31a2.3,2.3 0,0 0,2.62 0,1.56 1.56,0 0,0 0.49,-1.26v-1a0.26,0.26 0,0 0,-0.08 -0.19,0.24 0.24,0 0,0 -0.2,-0.08L25.45,33.78a0.25,0.25 0,0 0,-0.2 0.09,0.36 0.36,0 0,0 -0.07,0.22 0.32,0.32 0,0 0,0.07 0.22,0.26 0.26,0 0,0 0.2,0.1h0.81L26.26,35a0.86,0.86 0,0 1,-1 1,0.85 0.85,0 0,1 -0.95,-1L24.31,32.87a0.85,0.85 0,0 1,0.95 -1,0.84 0.84,0 0,1 1,0.8c0,0.18 0.15,0.26 0.42,0.26a0.5,0.5 0,0 0,0.33 -0.08,0.38 0.38,0 0,0 0.1,-0.3 1.18,1.18 0,0 0,-0.51 -1,2.11 2.11,0 0,0 -1.32,-0.38 1.94,1.94 0,0 0,-1.28 0.4,1.57 1.57,0 0,0 -0.48,1.27v2.18A1.56,1.56 0,0 0,24 36.31ZM28.15,36.6a0.54,0.54 0,0 0,0.29 0.07,0.56 0.56,0 0,0 0.3,-0.07 0.21,0.21 0,0 0,0.13 -0.19v-5a0.2,0.2 0,0 0,-0.13 -0.19,0.67 0.67,0 0,0 -0.3,-0.06 0.73,0.73 0,0 0,-0.3 0.06,0.21 0.21,0 0,0 -0.12,0.19v5A0.21,0.21 0,0 0,28.15 36.6ZM30.05,36.6a0.68,0.68 0,0 0,0.6 0,0.2 0.2,0 0,0 0.12,-0.19L30.77,34.25L32,34.25a0.23,0.23 0,0 0,0.2 -0.1,0.31 0.31,0 0,0 0.07,-0.21 0.35,0.35 0,0 0,-0.07 -0.23,0.24 0.24,0 0,0 -0.2,-0.09L30.77,33.62L30.77,31.9h2.34a0.23,0.23 0,0 0,0.2 -0.1,0.44 0.44,0 0,0 0.07,-0.26 0.4,0.4 0,0 0,-0.07 -0.24,0.21 0.21,0 0,0 -0.2,-0.1L30.3,31.2a0.44,0.44 0,0 0,-0.26 0.07,0.22 0.22,0 0,0 -0.12,0.19v4.95A0.21,0.21 0,0 0,30.05 36.6Z"
+      android:fillColor="#428dff"/>
 </vector>
