--- a/app/src/main/res/drawable/ic_mkv.xml
+++ b/app/src/main/res/drawable/ic_mkv.xml
@@ -1,27 +1,10 @@
-<!--
-  ~  Copyright (C) 2023  WirelessAlien <https://github.com/WirelessAlien>
-  ~
-  ~     This program is free software: you can redistribute it and/or modify
-  ~     it under the terms of the GNU General Public License as published by
-  ~     the Free Software Foundation, either version 3 of the License, or
-  ~     any later version.
-  ~
-  ~     This program is distributed in the hope that it will be useful,
-  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
-  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-  ~     GNU General Public License for more details.
-  ~
-  ~     You should have received a copy of the GNU General Public License
-  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
-  -->
-
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="200dp"
-    android:height="200dp"
-    android:viewportWidth="512"
-    android:viewportHeight="512"
+    android:width="24.95dp"
+    android:height="31dp"
+    android:viewportWidth="24.95"
+    android:viewportHeight="31"
     android:tint="?attr/colorControlNormal">
   <path
-      android:pathData="M458,118.2L346.5,8.4C345,6.9 342.9,6 340.7,6H135c-31.1,0 -56.3,26.6 -56.3,59.4v219.2H51.3v148.6h27.4v13.4c0,32.7 25.3,59.4 56.3,59.4h269.4c31.1,0 56.3,-26.6 56.3,-59.4V124.7C460.7,122.3 459.8,119.9 458,118.2zM337.9,24.4l97,95.6h-52.8c-24.4,0 -44.2,-19.5 -44.2,-43.4V24.4zM88.2,321.4h16.4l21.5,57.7h0.3l21.7,-57.7h16v75h-12.5v-53.9l-0.3,-0.1l-20.7,53.9H122l-21,-55l-0.3,0.1v54.9H88.2V321.4zM443.7,446.6c0,22.9 -17.6,41.5 -39.3,41.5H135c-21.7,0 -39.3,-18.6 -39.3,-41.5v-13.4h187c36.5,0 66,-33.3 66,-74.3v0c0,-41 -29.6,-74.3 -66,-74.3h-187V65.4c0,-22.9 17.6,-41.5 39.3,-41.5h185.9v52.7c0,33.8 27.4,61.3 61.2,61.3h61.6V446.6zM200.5,353.2l24.4,-31.8h14.7l0.2,0.3l-28.1,35.2l30.4,39.5h-15.8L201.7,364h-6.1v32.5h-12.5v-75h12.5v31.8H200.5zM246.3,321.4h13.3l17.9,54.7l1.3,5.5h0.3l1.3,-5.4l17.9,-54.8h13.3l-26.8,75h-11.9L246.3,321.4z"
-      android:fillColor="#ED1C24"/>
+      android:pathData="M24.5,31a0.5,0.5 0,0 1,-0.5 -0.5L24,8.69l-6.73,-7.69L3.5,1a2.5,2.5 0,0 0,-2.5 2.5v7a0.5,0.5 0,0 1,-1 0v-7a3.5,3.5 0,0 1,3.5 -3.5L17.68,-0L24.95,8.29L24.95,30.5A0.5,0.5 0,0 1,24.5 31ZM22.5,11.29a0.5,0.5 0,0 0,-0.5 -0.5L18.74,10.79a0.78,0.78 0,0 1,-0.79 -0.78L17.95,6.12a0.5,0.5 0,0 0,-1 0v3.86a1.79,1.79 0,0 0,1.79 1.78h3.21A0.5,0.5 0,0 0,22.5 11.29ZM1.38,24.18a0.54,0.54 0,0 0,0.29 0.07,0.56 0.56,0 0,0 0.3,-0.07 0.23,0.23 0,0 0,0.13 -0.19L2.1,20.35L3.17,22.29a0.31,0.31 0,0 0,0.29 0.18,0.37 0.37,0 0,0 0.31,-0.18l1.07,-1.85L4.84,23.99a0.21,0.21 0,0 0,0.13 0.19,0.54 0.54,0 0,0 0.29,0.07 0.56,0.56 0,0 0,0.3 -0.07,0.21 0.21,0 0,0 0.13,-0.19L5.69,19.18a0.35,0.35 0,0 0,-0.12 -0.3,0.45 0.45,0 0,0 -0.31,-0.1 0.68,0.68 0,0 0,-0.37 0.09,0.94 0.94,0 0,0 -0.29,0.36l-1.14,2 -1.12,-2a0.86,0.86 0,0 0,-0.29 -0.36,0.71 0.71,0 0,0 -0.38,-0.09 0.44,0.44 0,0 0,-0.3 0.1,0.35 0.35,0 0,0 -0.12,0.3L1.25,23.99A0.21,0.21 0,0 0,1.38 24.18ZM6.87,24.18a0.6,0.6 0,0 0,0.3 0.07,0.58 0.58,0 0,0 0.3,-0.07 0.22,0.22 0,0 0,0.12 -0.19L7.59,22.43l0.52,-0.62 1.63,2.32a0.35,0.35 0,0 0,0.31 0.15,0.58 0.58,0 0,0 0.34,-0.13A0.34,0.34 0,0 0,10.5 23.89a0.28,0.28 0,0 0,0 -0.15l-1.83,-2.59 1.54,-1.8a0.25,0.25 0,0 0,0.06 -0.16,0.36 0.36,0 0,0 -0.16,-0.28 0.5,0.5 0,0 0,-0.33 -0.13,0.3 0.3,0 0,0 -0.24,0.11L7.59,21.29L7.59,19.03a0.21,0.21 0,0 0,-0.12 -0.19,0.7 0.7,0 0,0 -0.3,-0.06 0.67,0.67 0,0 0,-0.3 0.06,0.22 0.22,0 0,0 -0.13,0.19v5A0.23,0.23 0,0 0,6.87 24.18ZM10.66,19.18 L12.25,24.03q0.11,0.27 0.54,0.27a0.89,0.89 0,0 0,0.34 -0.07,0.33 0.33,0 0,0 0.19,-0.2l1.59,-4.86a0.18,0.18 0,0 0,0 -0.06,0.26 0.26,0 0,0 -0.17,-0.23 0.65,0.65 0,0 0,-0.36 -0.1c-0.15,0 -0.25,0.05 -0.29,0.16l-1.31,4.27L11.5,18.94c0,-0.11 -0.14,-0.16 -0.29,-0.16a0.65,0.65 0,0 0,-0.36 0.1,0.26 0.26,0 0,0 -0.17,0.23A0.15,0.15 0,0 0,10.66 19.18Z"
+      android:fillColor="#428dff"/>
 </vector>
