--- a/app/src/main/res/drawable/ic_mov.xml
+++ b/app/src/main/res/drawable/ic_mov.xml
@@ -1,30 +1,13 @@
-<!--
-  ~  Copyright (C) 2023  WirelessAlien <https://github.com/WirelessAlien>
-  ~
-  ~     This program is free software: you can redistribute it and/or modify
-  ~     it under the terms of the GNU General Public License as published by
-  ~     the Free Software Foundation, either version 3 of the License, or
-  ~     any later version.
-  ~
-  ~     This program is distributed in the hope that it will be useful,
-  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
-  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-  ~     GNU General Public License for more details.
-  ~
-  ~     You should have received a copy of the GNU General Public License
-  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
-  -->
-
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="200dp"
-    android:height="200dp"
-    android:viewportWidth="512"
-    android:viewportHeight="512"
+    android:width="24.95dp"
+    android:height="31dp"
+    android:viewportWidth="24.95"
+    android:viewportHeight="31"
     android:tint="?attr/colorControlNormal">
   <path
-      android:pathData="M208.8,386.4c5.6,0 10,-2 13.2,-5.9c3.2,-3.9 4.8,-8.9 4.8,-15.1v-13.2c0,-6.1 -1.6,-11.1 -4.9,-15c-3.2,-3.9 -7.6,-5.9 -13.2,-5.9c-5.4,0 -9.6,2 -12.7,5.9c-3.1,3.9 -4.6,8.9 -4.6,15v13.2c0,6.1 1.6,11.2 4.7,15.1C199.2,384.5 203.4,386.4 208.8,386.4z"
-      android:fillColor="#ED1C24"/>
+      android:pathData="M24.5,31a0.5,0.5 0,0 1,-0.5 -0.5L24,8.68l-6.73,-7.68L3.5,1a2.5,2.5 0,0 0,-2.5 2.5v7a0.5,0.5 0,0 1,-1 0v-7a3.5,3.5 0,0 1,3.5 -3.5L17.68,-0l7.27,8.31L24.95,30.5A0.5,0.5 0,0 1,24.5 31ZM22.5,8.95a0.5,0.5 0,0 0,-0.5 -0.5L18.74,8.45a0.79,0.79 0,0 1,-0.79 -0.79L17.95,3.78a0.5,0.5 0,0 0,-1 0v3.86a1.79,1.79 0,0 0,1.79 1.79h3.21A0.5,0.5 0,0 0,22.5 8.95Z"
+      android:fillColor="#428dff"/>
   <path
-      android:pathData="M458,118.2L346.5,8.4C345,6.9 342.9,6 340.7,6H135c-31.1,0 -56.3,26.6 -56.3,59.4v219.2H51.3v148.6h27.4v13.4c0,32.7 25.3,59.4 56.3,59.4h269.4c31.1,0 56.3,-26.6 56.3,-59.4V124.7C460.7,122.3 459.8,119.9 458,118.2zM337.9,24.4l97,95.6h-52.8c-24.4,0 -44.2,-19.5 -44.2,-43.4V24.4zM89.4,322.5h16l20.9,56.1h0.3l21.1,-56.1h15.5v72.9h-12.2V343l-0.3,-0.1l-20.1,52.4h-8.4l-20.4,-53.4l-0.3,0.1v53.3H89.4V322.5zM443.7,446.6c0,22.9 -17.6,41.5 -39.3,41.5H135c-21.7,0 -39.3,-18.6 -39.3,-41.5v-13.4h187c36.5,0 66,-33.3 66,-74.3v0c0,-41 -29.6,-74.3 -66,-74.3h-187V65.4c0,-22.9 17.6,-41.5 39.3,-41.5h185.9v52.7c0,33.8 27.4,61.3 61.2,61.3h61.6V446.6zM179.3,365.5v-13.1c0,-8.9 2.7,-16.3 8.2,-22.1c5.5,-5.9 12.6,-8.8 21.3,-8.8c8.9,0 16.2,2.9 21.8,8.8c5.6,5.9 8.4,13.3 8.4,22.1v13.1c0,8.9 -2.8,16.3 -8.4,22.2c-5.6,5.9 -12.9,8.8 -21.8,8.8c-8.7,0 -15.8,-2.9 -21.3,-8.8C182,381.8 179.3,374.4 179.3,365.5zM246.9,322.5h13l17.4,53.1l1.3,5.3h0.3l1.3,-5.2l17.4,-53.2h13l-26,72.9h-11.6L246.9,322.5z"
-      android:fillColor="#ED1C24"/>
+      android:pathData="M1.23,21.5L1.23,16.68a0.38,0.38 0,0 1,0.12 -0.3,0.49 0.49,0 0,1 0.3,-0.09 0.71,0.71 0,0 1,0.38 0.09,1 1,0 0,1 0.3,0.36l1.12,2 1.13,-2a0.94,0.94 0,0 1,0.29 -0.36,0.69 0.69,0 0,1 0.38,-0.09 0.49,0.49 0,0 1,0.3 0.09,0.38 0.38,0 0,1 0.12,0.3v4.82a0.21,0.21 0,0 1,-0.13 0.19,0.54 0.54,0 0,1 -0.29,0.07 0.56,0.56 0,0 1,-0.3 -0.07,0.21 0.21,0 0,1 -0.13,-0.19L4.82,17.95l-1.07,1.85a0.36,0.36 0,0 1,-0.31 0.18,0.31 0.31,0 0,1 -0.29,-0.18l-1.07,-1.9v3.64a0.21,0.21 0,0 1,-0.13 0.19,0.56 0.56,0 0,1 -0.3,0.07 0.54,0.54 0,0 1,-0.29 -0.07A0.21,0.21 0,0 1,1.23 21.5ZM6.67,20.14L6.67,17.95a1.54,1.54 0,0 1,0.49 -1.27,2 2,0 0,1 1.3,-0.4 2,2 0,0 1,1.31 0.4A1.54,1.54 0,0 1,10.26 17.95v2.18a1.53,1.53 0,0 1,-0.49 1.26,2 2,0 0,1 -1.31,0.41 2,2 0,0 1,-1.3 -0.41A1.53,1.53 0,0 1,6.67 20.14ZM7.52,20.14a0.84,0.84 0,0 0,0.94 1,1 1,0 0,0 0.71,-0.24 1,1 0,0 0,0.24 -0.72L9.41,17.95a1,1 0,0 0,-0.24 -0.73A1,1 0,0 0,8.5 16.95c-0.63,0 -0.94,0.32 -0.94,1ZM10.83,16.62a0.28,0.28 0,0 1,0.17 -0.24,0.74 0.74,0 0,1 0.36,-0.09c0.16,0 0.26,0.05 0.29,0.16l1.32,4.27 1.32,-4.27c0,-0.11 0.13,-0.16 0.28,-0.16a0.74,0.74 0,0 1,0.36 0.09,0.28 0.28,0 0,1 0.17,0.24 0.18,0.18 0,0 1,0 0.06L13.5,21.54a0.31,0.31 0,0 1,-0.19 0.2,0.89 0.89,0 0,1 -0.34,0.07c-0.29,0 -0.47,-0.09 -0.53,-0.27l-1.6,-4.86S10.83,16.65 10.83,16.62Z"
+      android:fillColor="#428dff"/>
 </vector>
