--- a/app/src/main/res/drawable/ic_mp3.xml
+++ b/app/src/main/res/drawable/ic_mp3.xml
@@ -1,30 +1,10 @@
-<!--
-  ~  Copyright (C) 2023  WirelessAlien <https://github.com/WirelessAlien>
-  ~
-  ~     This program is free software: you can redistribute it and/or modify
-  ~     it under the terms of the GNU General Public License as published by
-  ~     the Free Software Foundation, either version 3 of the License, or
-  ~     any later version.
-  ~
-  ~     This program is distributed in the hope that it will be useful,
-  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
-  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-  ~     GNU General Public License for more details.
-  ~
-  ~     You should have received a copy of the GNU General Public License
-  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
-  -->
-
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="200dp"
-    android:height="200dp"
-    android:viewportWidth="512"
-    android:viewportHeight="512"
+    android:width="24.95dp"
+    android:height="31dp"
+    android:viewportWidth="24.95"
+    android:viewportHeight="31"
     android:tint="?attr/colorControlNormal">
   <path
-      android:pathData="M227.1,354.4c2.3,-2.4 3.4,-5.5 3.4,-9.2s-1.1,-6.8 -3.4,-9.3c-2.3,-2.5 -5.7,-3.7 -10.2,-3.7h-15.8V358H217C221.5,358 224.9,356.8 227.1,354.4z"
-      android:fillColor="#ED1C24"/>
-  <path
-      android:pathData="M458,118.2L346.5,8.4C345,6.9 342.9,6 340.7,6H135c-31.1,0 -56.3,26.6 -56.3,59.4v219.2H51.3v148.6h27.4v13.4c0,32.7 25.3,59.4 56.3,59.4h269.4c31.1,0 56.3,-26.6 56.3,-59.4V124.7C460.7,122.3 459.8,119.9 458,118.2zM337.9,24.4l97,95.6h-52.8c-24.4,0 -44.2,-19.5 -44.2,-43.4V24.4zM443.7,446.6c0,22.9 -17.6,41.5 -39.3,41.5H135c-21.7,0 -39.3,-18.6 -39.3,-41.5v-13.4h187c36.5,0 66,-33.3 66,-74.3s-29.6,-74.3 -66,-74.3h-187V65.4c0,-22.9 17.6,-41.5 39.3,-41.5h185.9v52.7c0,33.8 27.4,61.3 61.2,61.3h61.6V446.6zM158.1,342.9L138,395.4h-8.4l-20.4,-53.4l-0.3,0.1v53.3H96.8v-72.9h16l20.9,56.1h0.3l21.1,-56.1h15.5v72.9h-12.2V343L158.1,342.9zM189,395.4v-72.9H217c8,0 14.3,2.1 18.9,6.2c4.6,4.2 6.8,9.6 6.8,16.4c0,6.8 -2.3,12.3 -6.8,16.4c-4.6,4.1 -10.9,6.2 -18.9,6.2h-15.8v27.6H189zM288,365.7c-2,-2 -5.1,-3.1 -9.2,-3.1h-8.1v-9.6h8.1c3.9,0 6.8,-1 8.5,-3c1.7,-2 2.6,-4.7 2.6,-8.3c0,-3.2 -0.9,-5.7 -2.8,-7.7c-1.9,-2 -4.6,-3 -8.1,-3c-3.3,0 -6,1 -8.2,2.9c-2.2,2 -3.3,4.4 -3.3,7.3h-11.7l-0.1,-0.3c-0.2,-5.6 1.9,-10.3 6.4,-14c4.5,-3.8 10.1,-5.7 16.8,-5.7c7.1,0 12.7,1.7 16.8,5.2c4.1,3.5 6.2,8.6 6.2,15.2c0,3.3 -0.9,6.4 -2.7,9.2c-1.8,2.8 -4.3,5 -7.6,6.5c3.7,1.5 6.5,3.7 8.5,6.6c2,3 3,6.5 3,10.7c0,6.7 -2.3,12 -6.8,15.8c-4.5,3.8 -10.3,5.7 -17.4,5.7c-6.4,0 -12,-1.8 -16.9,-5.4c-4.8,-3.6 -7.2,-8.6 -7,-14.8l0.1,-0.3h11.7c0,3.1 1.1,5.6 3.4,7.7c2.3,2.1 5.1,3.1 8.7,3.1c3.7,0 6.6,-1.1 8.8,-3.3c2.2,-2.2 3.3,-5 3.3,-8.4C291,370.8 290,367.8 288,365.7z"
-      android:fillColor="#ED1C24"/>
+      android:pathData="M24.5,31a0.5,0.5 0,0 1,-0.5 -0.5L24,8.68l-6.73,-7.68L3.5,1a2.5,2.5 0,0 0,-2.5 2.5v7a0.5,0.5 0,0 1,-1 0v-7a3.5,3.5 0,0 1,3.5 -3.5L17.68,-0l7.27,8.31L24.95,30.5A0.5,0.5 0,0 1,24.5 31ZM22.5,8.95a0.5,0.5 0,0 0,-0.5 -0.5L18.74,8.45a0.79,0.79 0,0 1,-0.79 -0.79L17.95,3.78a0.5,0.5 0,0 0,-1 0v3.86a1.79,1.79 0,0 0,1.79 1.79h3.21A0.5,0.5 0,0 0,22.5 8.95ZM2.27,21.59L2.27,16.78a0.35,0.35 0,0 1,0.12 -0.3,0.45 0.45,0 0,1 0.31,-0.1 0.74,0.74 0,0 1,0.38 0.09,1.28 1.28,0 0,1 0.29,0.36l1.12,2 1.13,-2a1.28,1.28 0,0 1,0.29 -0.36,0.71 0.71,0 0,1 0.38,-0.09 0.44,0.44 0,0 1,0.3 0.1,0.35 0.35,0 0,1 0.12,0.3v4.81a0.21,0.21 0,0 1,-0.12 0.19,0.61 0.61,0 0,1 -0.3,0.08 0.58,0.58 0,0 1,-0.3 -0.08,0.22 0.22,0 0,1 -0.13,-0.19L5.86,18l-1.07,1.86a0.36,0.36 0,0 1,-0.31 0.18,0.31 0.31,0 0,1 -0.29,-0.18L3.12,17.95v3.64a0.21,0.21 0,0 1,-0.12 0.19,0.61 0.61,0 0,1 -0.3,0.08 0.56,0.56 0,0 1,-0.3 -0.08A0.2,0.2 0,0 1,2.27 21.59ZM7.77,21.59L7.77,16.64a0.23,0.23 0,0 1,0.09 -0.18,0.36 0.36,0 0,1 0.23,-0.08h1.57a1.9,1.9 0,0 1,1.27 0.4,1.52 1.52,0 0,1 0.48,1.25v0.06a1.53,1.53 0,0 1,-0.49 1.25,2 2,0 0,1 -1.31,0.4h-1v1.85a0.22,0.22 0,0 1,-0.13 0.19,0.56 0.56,0 0,1 -0.3,0.08 0.61,0.61 0,0 1,-0.3 -0.08A0.21,0.21 0,0 1,7.77 21.59ZM8.62,19.12h1a1,1 0,0 0,0.7 -0.25,1 1,0 0,0 0.25,-0.73L10.57,18.05a0.93,0.93 0,0 0,-0.25 -0.72,1 1,0 0,0 -0.7,-0.24h-1ZM11.79,20.58a0.3,0.3 0,0 1,0.09 -0.26,0.47 0.47,0 0,1 0.3,-0.07 0.59,0.59 0,0 1,0.35 0.07,0.26 0.26,0 0,1 0.09,0.23 0.56,0.56 0,0 0,0.25 0.46,1.14 1.14,0 0,0 0.7,0.19A1.08,1.08 0,0 0,14.3 20.95a0.94,0.94 0,0 0,0.24 -0.71v-0.14c0,-0.55 -0.33,-0.82 -1,-0.82 -0.18,0 -0.27,-0.1 -0.27,-0.31s0.09,-0.32 0.27,-0.32a1,1 0,0 0,0.62 -0.17,0.82 0.82,0 0,0 0.21,-0.65c0,-0.52 -0.27,-0.77 -0.8,-0.77a0.93,0.93 0,0 0,-0.64 0.17,0.56 0.56,0 0,0 -0.19,0.43c0,0.22 -0.13,0.32 -0.4,0.32A0.61,0.61 0,0 1,12 17.95a0.42,0.42 0,0 1,-0.08 -0.29,1.19 1.19,0 0,1 0.08,-0.41 1.3,1.3 0,0 1,0.26 -0.4,1.15 1.15,0 0,1 0.53,-0.33 2.22,2.22 0,0 1,0.81 -0.13c1.07,0 1.61,0.45 1.61,1.34a1.74,1.74 0,0 1,-0.17 0.79,1 1,0 0,1 -0.47,0.46 1.13,1.13 0,0 1,0.81 1.16v0.14a1.49,1.49 0,0 1,-0.5 1.24,2.11 2.11,0 0,1 -1.32,0.39 1.91,1.91 0,0 1,-1.32 -0.4A1.22,1.22 0,0 1,11.79 20.58Z"
+      android:fillColor="#428dff"/>
 </vector>
