--- a/app/src/main/res/drawable/ic_mp4.xml
+++ b/app/src/main/res/drawable/ic_mp4.xml
@@ -1,33 +1,10 @@
-<!--
-  ~  Copyright (C) 2023  WirelessAlien <https://github.com/WirelessAlien>
-  ~
-  ~     This program is free software: you can redistribute it and/or modify
-  ~     it under the terms of the GNU General Public License as published by
-  ~     the Free Software Foundation, either version 3 of the License, or
-  ~     any later version.
-  ~
-  ~     This program is distributed in the hope that it will be useful,
-  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
-  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-  ~     GNU General Public License for more details.
-  ~
-  ~     You should have received a copy of the GNU General Public License
-  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
-  -->
-
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="200dp"
-    android:height="200dp"
-    android:viewportWidth="512"
-    android:viewportHeight="512"
+    android:width="24.95dp"
+    android:height="31dp"
+    android:viewportWidth="24.95"
+    android:viewportHeight="31"
     android:tint="?attr/colorControlNormal">
   <path
-      android:pathData="M226.9,354.2c2.3,-2.5 3.5,-5.6 3.5,-9.4s-1.2,-7 -3.5,-9.5c-2.3,-2.5 -5.8,-3.8 -10.5,-3.8h-16.2v26.5h16.2C221.1,357.9 224.6,356.7 226.9,354.2z"
-      android:fillColor="#ED1C24"/>
-  <path
-      android:pathData="M283.7,341.9l-18,27.8l19.5,0l0,-30.6l-0.3,-0.1z"
-      android:fillColor="#ED1C24"/>
-  <path
-      android:pathData="M458,118.2L346.5,8.4C345,6.9 342.9,6 340.7,6H135c-31.1,0 -56.3,26.6 -56.3,59.4v219.2H51.3v148.6h27.4v13.4c0,32.7 25.3,59.4 56.3,59.4h269.4c31.1,0 56.3,-26.6 56.3,-59.4V124.7C460.7,122.3 459.8,119.9 458,118.2zM337.9,24.4l97,95.6h-52.8c-24.4,0 -44.2,-19.5 -44.2,-43.4V24.4zM92.8,321.4h16.4l21.5,57.7h0.3l21.7,-57.7h16v75h-12.5v-53.9l-0.3,-0.1l-20.7,53.9h-8.6l-21,-55l-0.3,0.1v54.9H92.8V321.4zM443.7,446.6c0,22.9 -17.6,41.5 -39.3,41.5H135c-21.7,0 -39.3,-18.6 -39.3,-41.5v-13.4h187c36.5,0 66,-33.3 66,-74.3s-29.6,-74.3 -66,-74.3h-187V65.4c0,-22.9 17.6,-41.5 39.3,-41.5h185.9v52.7c0,33.8 27.4,61.3 61.2,61.3h61.6V446.6zM187.7,396.4v-75h28.7c8.3,0 14.8,2.1 19.4,6.4s7,9.9 7,16.9c0,7 -2.3,12.7 -7,16.9c-4.7,4.2 -11.2,6.4 -19.4,6.4h-16.2v28.4H187.7zM307.1,369.7v10.1h-9.5v16.6h-12.5v-16.6h-31.4l-0.3,-7.7l31.3,-50.7h12.8v48.3H307.1z"
-      android:fillColor="#ED1C24"/>
+      android:pathData="M24.5,31a0.5,0.5 0,0 1,-0.5 -0.5L24,8.68l-6.73,-7.68L3.5,1a2.5,2.5 0,0 0,-2.5 2.5v7a0.5,0.5 0,0 1,-1 0v-7a3.5,3.5 0,0 1,3.5 -3.5L17.68,-0l7.27,8.31L24.95,30.5A0.5,0.5 0,0 1,24.5 31ZM22.5,8.95a0.5,0.5 0,0 0,-0.5 -0.5L18.74,8.45a0.79,0.79 0,0 1,-0.79 -0.79L17.95,3.78a0.5,0.5 0,0 0,-1 0v3.86a1.79,1.79 0,0 0,1.79 1.79h3.21A0.5,0.5 0,0 0,22.5 8.95ZM1.79,21.58L1.79,16.77a0.35,0.35 0,0 1,0.12 -0.3,0.46 0.46,0 0,1 0.31,-0.1 0.74,0.74 0,0 1,0.38 0.09,1.13 1.13,0 0,1 0.29,0.36l1.12,2 1.14,-2a1.12,1.12 0,0 1,0.28 -0.36,0.74 0.74,0 0,1 0.38,-0.09 0.44,0.44 0,0 1,0.3 0.1,0.35 0.35,0 0,1 0.12,0.3v4.81a0.21,0.21 0,0 1,-0.12 0.19,0.56 0.56,0 0,1 -0.3,0.08 0.61,0.61 0,0 1,-0.3 -0.08,0.21 0.21,0 0,1 -0.12,-0.19L5.39,17.95L4.31,19.85a0.36,0.36 0,0 1,-0.31 0.18,0.32 0.32,0 0,1 -0.29,-0.18L2.64,17.95v3.64a0.21,0.21 0,0 1,-0.12 0.19,0.58 0.58,0 0,1 -0.3,0.08 0.61,0.61 0,0 1,-0.3 -0.08A0.22,0.22 0,0 1,1.79 21.58ZM7.29,21.58v-5a0.23,0.23 0,0 1,0.09 -0.18,0.36 0.36,0 0,1 0.24,-0.08h1.56a1.88,1.88 0,0 1,1.27 0.4,1.52 1.52,0 0,1 0.48,1.25v0.06a1.5,1.5 0,0 1,-0.49 1.25,2 2,0 0,1 -1.31,0.4h-1v1.85a0.2,0.2 0,0 1,-0.13 0.19,0.56 0.56,0 0,1 -0.3,0.08 0.55,0.55 0,0 1,-0.29 -0.08A0.2,0.2 0,0 1,7.29 21.58ZM8.14,19.1h1a0.86,0.86 0,0 0,0.95 -1v-0.09a1,1 0,0 0,-0.25 -0.73,1 1,0 0,0 -0.7,-0.23h-1ZM11.02,20.32a0.25,0.25 0,0 1,0.05 -0.16l1.93,-3.57a0.39,0.39 0,0 1,0.37 -0.22,0.54 0.54,0 0,1 0.28,0.09 0.24,0.24 0,0 1,0.14 0.22,0.24 0.24,0 0,1 0,0.12l-1.64,3.08h1.17v-1c0,-0.18 0.14,-0.27 0.43,-0.27a0.73,0.73 0,0 1,0.3 0.07,0.22 0.22,0 0,1 0.12,0.2v1L14.5,19.88a0.23,0.23 0,0 1,0.21 0.11,0.45 0.45,0 0,1 0.08,0.26 0.36,0.36 0,0 1,-0.09 0.24,0.24 0.24,0 0,1 -0.2,0.12h-0.39v1a0.2,0.2 0,0 1,-0.13 0.19,0.55 0.55,0 0,1 -0.29,0.08 0.56,0.56 0,0 1,-0.3 -0.08,0.2 0.2,0 0,1 -0.13,-0.19v-1h-2a0.32,0.32 0,0 1,-0.21 -0.08A0.29,0.29 0,0 1,11.02 20.32Z"
+      android:fillColor="#428dff"/>
 </vector>
