--- a/app/src/main/res/drawable/ic_ppt.xml
+++ b/app/src/main/res/drawable/ic_ppt.xml
@@ -1,33 +1,10 @@
-<!--
-  ~  Copyright (C) 2023  WirelessAlien <https://github.com/WirelessAlien>
-  ~
-  ~     This program is free software: you can redistribute it and/or modify
-  ~     it under the terms of the GNU General Public License as published by
-  ~     the Free Software Foundation, either version 3 of the License, or
-  ~     any later version.
-  ~
-  ~     This program is distributed in the hope that it will be useful,
-  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
-  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-  ~     GNU General Public License for more details.
-  ~
-  ~     You should have received a copy of the GNU General Public License
-  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
-  -->
-
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="200dp"
-    android:height="200dp"
-    android:viewportWidth="512"
-    android:viewportHeight="512"
+    android:width="24.95dp"
+    android:height="31dp"
+    android:viewportWidth="24.95"
+    android:viewportHeight="31"
     android:tint="?attr/colorControlNormal">
   <path
-      android:pathData="M142.6,354.2c2.3,-2.5 3.5,-5.6 3.5,-9.4c0,-3.8 -1.2,-7 -3.5,-9.5c-2.3,-2.5 -5.8,-3.8 -10.5,-3.8H116v26.5h16.2C136.8,357.9 140.3,356.7 142.6,354.2z"
-      android:fillColor="#ED1C24"/>
-  <path
-      android:pathData="M458,118.2L346.5,8.4C345,6.9 342.9,6 340.7,6H135c-31.1,0 -56.3,26.6 -56.3,59.4v219.2H51.3v148.6h27.4v13.4c0,32.7 25.3,59.4 56.3,59.4h269.4c31.1,0 56.3,-26.6 56.3,-59.4V124.7C460.7,122.3 459.8,119.9 458,118.2zM337.9,24.4l97,95.6h-52.8c-24.4,0 -44.2,-19.5 -44.2,-43.4V24.4zM443.7,446.6c0,22.9 -17.6,41.5 -39.3,41.5H135c-21.7,0 -39.3,-18.6 -39.3,-41.5v-13.4h187c36.5,0 66,-33.3 66,-74.3v0c0,-41 -29.6,-74.3 -66,-74.3h-187V65.4c0,-22.9 17.6,-41.5 39.3,-41.5h185.9v52.7c0,33.8 27.4,61.3 61.2,61.3h61.6V446.6zM103.4,396.4v-75h28.7c8.3,0 14.8,2.1 19.4,6.4s7,9.9 7,16.9c0,7 -2.3,12.7 -7,16.9c-4.7,4.2 -11.2,6.4 -19.4,6.4H116v28.4H103.4zM173.8,396.4v-75h28.7c8.3,0 14.8,2.1 19.4,6.4s7,9.9 7,16.9c0,7 -2.3,12.7 -7,16.9c-4.7,4.2 -11.2,6.4 -19.4,6.4h-16.2v28.4H173.8zM238,331.5v-10h58.5v10h-23.2v65h-12.5v-65H238z"
-      android:fillColor="#ED1C24"/>
-  <path
-      android:pathData="M213,354.2c2.3,-2.5 3.5,-5.6 3.5,-9.4c0,-3.8 -1.2,-7 -3.5,-9.5c-2.3,-2.5 -5.8,-3.8 -10.5,-3.8h-16.2v26.5h16.2C207.2,357.9 210.6,356.7 213,354.2z"
-      android:fillColor="#ED1C24"/>
+      android:pathData="M24.5,31a0.5,0.5 0,0 1,-0.5 -0.5L24,8.68l-6.73,-7.68L3.5,1a2.5,2.5 0,0 0,-2.5 2.5v7a0.5,0.5 0,0 1,-1 0v-7a3.5,3.5 0,0 1,3.5 -3.5L17.68,-0l7.27,8.31L24.95,30.5A0.5,0.5 0,0 1,24.5 31ZM22.5,8.95a0.5,0.5 0,0 0,-0.5 -0.5L18.74,8.45a0.79,0.79 0,0 1,-0.79 -0.79L17.95,3.78a0.5,0.5 0,0 0,-1 0v3.86a1.79,1.79 0,0 0,1.79 1.79h3.21A0.5,0.5 0,0 0,22.5 8.95ZM1.9,21.73a0.54,0.54 0,0 0,0.29 0.07,0.62 0.62,0 0,0 0.31,-0.07 0.21,0.21 0,0 0,0.12 -0.19L2.62,19.69h1a2,2 0,0 0,1.31 -0.4,1.51 1.51,0 0,0 0.49,-1.25L5.42,17.95a1.55,1.55 0,0 0,-0.47 -1.25,1.92 1.92,0 0,0 -1.28,-0.4L2.1,16.3a0.36,0.36 0,0 0,-0.24 0.07,0.23 0.23,0 0,0 -0.09,0.18v5A0.2,0.2 0,0 0,1.9 21.73ZM2.62,17.03h1a0.94,0.94 0,0 1,0.7 0.24,1 1,0 0,1 0.25,0.73v0.09a1,1 0,0 1,-0.25 0.73,0.94 0.94,0 0,1 -0.7,0.24h-1ZM6.26,21.73a0.56,0.56 0,0 0,0.3 0.07,0.54 0.54,0 0,0 0.29,-0.07 0.2,0.2 0,0 0,0.13 -0.19L6.98,19.69h1a2,2 0,0 0,1.31 -0.4,1.51 1.51,0 0,0 0.49,-1.25L9.78,17.95a1.52,1.52 0,0 0,-0.48 -1.25,1.88 1.88,0 0,0 -1.27,-0.4L6.5,16.3a0.36,0.36 0,0 0,-0.24 0.07,0.23 0.23,0 0,0 -0.09,0.18v5A0.2,0.2 0,0 0,6.26 21.73ZM6.98,17.03h1a0.86,0.86 0,0 1,1 1v0.09a0.86,0.86 0,0 1,-1 1h-1ZM10.15,16.95a0.22,0.22 0,0 0,0.2 0.11h1.24v4.48a0.22,0.22 0,0 0,0.13 0.19,0.56 0.56,0 0,0 0.3,0.07 0.54,0.54 0,0 0,0.29 -0.07,0.2 0.2,0 0,0 0.13,-0.19L12.44,17.06h1.23a0.23,0.23 0,0 0,0.21 -0.11,0.46 0.46,0 0,0 0.08,-0.27 0.41,0.41 0,0 0,-0.08 -0.24,0.24 0.24,0 0,0 -0.21,-0.11L10.35,16.33a0.22,0.22 0,0 0,-0.2 0.11,0.44 0.44,0 0,0 -0.08,0.25A0.45,0.45 0,0 0,10.15 16.95Z"
+      android:fillColor="#428dff"/>
 </vector>
