--- a/app/src/main/res/drawable/ic_rar.xml
+++ b/app/src/main/res/drawable/ic_rar.xml
@@ -1,36 +1,10 @@
-<!--
-  ~  Copyright (C) 2023  WirelessAlien <https://github.com/WirelessAlien>
-  ~
-  ~     This program is free software: you can redistribute it and/or modify
-  ~     it under the terms of the GNU General Public License as published by
-  ~     the Free Software Foundation, either version 3 of the License, or
-  ~     any later version.
-  ~
-  ~     This program is distributed in the hope that it will be useful,
-  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
-  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-  ~     GNU General Public License for more details.
-  ~
-  ~     You should have received a copy of the GNU General Public License
-  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
-  -->
-
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="200dp"
-    android:height="200dp"
-    android:viewportWidth="512"
-    android:viewportHeight="512"
+    android:width="24.95dp"
+    android:height="31dp"
+    android:viewportWidth="24.95"
+    android:viewportHeight="31"
     android:tint="?attr/colorControlNormal">
   <path
-      android:pathData="M127.7,331.5h-13.3v23.8H127c5,0 8.7,-1 11,-2.9c2.3,-1.9 3.5,-4.9 3.5,-8.8c0,-3.8 -1.1,-6.7 -3.4,-8.9C135.8,332.5 132.3,331.5 127.7,331.5z"
-      android:fillColor="#ED1C24"/>
-  <path
-      android:pathData="M458,118.2L346.5,8.4C345,6.9 342.9,6 340.7,6H135c-31.1,0 -56.3,26.6 -56.3,59.4v219.2H51.3v148.6h27.4v13.4c0,32.7 25.3,59.4 56.3,59.4h269.4c31.1,0 56.3,-26.6 56.3,-59.4V124.7C460.7,122.3 459.8,119.9 458,118.2zM337.9,24.4l97,95.6h-52.8c-24.4,0 -44.2,-19.5 -44.2,-43.4V24.4zM443.7,446.6c0,22.9 -17.6,41.5 -39.3,41.5H135c-21.7,0 -39.3,-18.6 -39.3,-41.5v-13.4h187c36.5,0 66,-33.3 66,-74.3v0c0,-41 -29.6,-74.3 -66,-74.3h-187V65.4c0,-22.9 17.6,-41.5 39.3,-41.5h185.9v52.7c0,33.8 27.4,61.3 61.2,61.3h61.6V446.6zM151.3,366.5c1.9,3 2.8,6.8 2.8,11.2v6.2c0,2.2 0.3,4.3 0.8,6.4c0.5,2.1 1.5,3.7 2.7,4.8v1.2h-12.9c-1.4,-1.1 -2.2,-2.9 -2.6,-5.3c-0.4,-2.4 -0.6,-4.8 -0.6,-7.2v-6c0,-3.8 -1.1,-6.9 -3.3,-9.2c-2.2,-2.3 -5.2,-3.4 -9,-3.4h-14.8v31.1h-12.5v-75h25.8c8.3,0 14.8,1.9 19.4,5.7c4.6,3.8 6.9,9.2 6.9,16.2c0,3.9 -1,7.2 -3,10c-2,2.8 -4.9,5 -8.8,6.7C146.3,361.3 149.4,363.5 151.3,366.5zM165.9,396.4l26.2,-75H204l25.9,75h-12.9l-5.7,-17.5h-26.6l-5.8,17.5H165.9zM291.7,366.5c1.9,3 2.8,6.8 2.8,11.2v6.2c0,2.2 0.3,4.3 0.8,6.4c0.5,2.1 1.5,3.7 2.7,4.8v1.2h-12.9c-1.4,-1.1 -2.2,-2.9 -2.6,-5.3c-0.4,-2.4 -0.6,-4.8 -0.6,-7.2v-6c0,-3.8 -1.1,-6.9 -3.3,-9.2c-2.2,-2.3 -5.2,-3.4 -9,-3.4h-14.8v31.1h-12.5v-75h25.8c8.3,0 14.8,1.9 19.4,5.7c4.6,3.8 6.9,9.2 6.9,16.2c0,3.9 -1,7.2 -3,10c-2,2.8 -4.9,5 -8.8,6.7C286.8,361.3 289.8,363.5 291.7,366.5z"
-      android:fillColor="#ED1C24"/>
-  <path
-      android:pathData="M268.1,331.5h-13.3v23.8h12.6c5,0 8.7,-1 11,-2.9c2.3,-1.9 3.5,-4.9 3.5,-8.8c0,-3.8 -1.1,-6.7 -3.4,-8.9C276.2,332.5 272.7,331.5 268.1,331.5z"
-      android:fillColor="#ED1C24"/>
-  <path
-      android:pathData="M198.2,338.9l-0.3,0l-9.8,29.5l19.7,0z"
-      android:fillColor="#ED1C24"/>
+      android:pathData="M24.5,31a0.5,0.5 0,0 1,-0.5 -0.5L24,8.68l-6.73,-7.68L3.5,1a2.5,2.5 0,0 0,-2.5 2.5v7a0.5,0.5 0,0 1,-1 0v-7a3.5,3.5 0,0 1,3.5 -3.5L17.68,-0l7.27,8.31L24.95,30.5A0.5,0.5 0,0 1,24.5 31ZM22.5,10.95a0.5,0.5 0,0 0,-0.5 -0.5L18.74,10.45a0.78,0.78 0,0 1,-0.79 -0.78L17.95,5.78a0.5,0.5 0,0 0,-1 0v3.86a1.79,1.79 0,0 0,1.79 1.78h3.21A0.5,0.5 0,0 0,22.5 10.95ZM1.92,23.8a0.65,0.65 0,0 0,0.29 0.07,0.66 0.66,0 0,0 0.3,-0.07 0.23,0.23 0,0 0,0.12 -0.2L2.63,21.51h0.81l1.17,2.15a0.38,0.38 0,0 0,0.34 0.23,0.52 0.52,0 0,0 0.34,-0.13 0.36,0.36 0,0 0,0.17 -0.28,0.23 0.23,0 0,0 0,-0.11l-1.12,-2a1.48,1.48 0,0 0,0.82 -0.48,1.55 1.55,0 0,0 0.3,-1c0,-1 -0.61,-1.53 -1.84,-1.53L2.07,18.36a0.3,0.3 0,0 0,-0.2 0.08,0.25 0.25,0 0,0 -0.08,0.18v5A0.21,0.21 0,0 0,1.92 23.8ZM2.63,19.1h1c0.66,0 1,0.29 1,0.89s-0.34,0.89 -1,0.89h-1ZM6.02,23.77a0.75,0.75 0,0 0,0.36 0.1c0.16,0 0.26,-0.06 0.29,-0.17l0.33,-1.07h2l0.33,1.07c0,0.11 0.14,0.17 0.31,0.17a1,1 0,0 0,0.4 -0.1,0.29 0.29,0 0,0 0.18,-0.25 0.23,0.23 0,0 0,0 -0.07l-1.59,-4.85c-0.06,-0.17 -0.26,-0.25 -0.57,-0.25s-0.5,0.09 -0.57,0.27l-1.59,4.85a0.15,0.15 0,0 0,0 0.07A0.27,0.27 0,0 0,6.02 23.77ZM8.02,19.43 L8.82,22L7.19,22ZM10.93,23.8a0.65,0.65 0,0 0,0.29 0.07,0.73 0.73,0 0,0 0.3,-0.07 0.23,0.23 0,0 0,0.12 -0.2L11.64,21.51h0.81l1.17,2.15a0.37,0.37 0,0 0,0.33 0.23,0.53 0.53,0 0,0 0.35,-0.13 0.35,0.35 0,0 0,0.16 -0.28,0.23 0.23,0 0,0 0,-0.11l-1.12,-2A1.51,1.51 0,0 0,14.1 20.95a1.55,1.55 0,0 0,0.3 -1c0,-1 -0.61,-1.53 -1.84,-1.53L11.04,18.42a0.28,0.28 0,0 0,-0.2 0.08,0.25 0.25,0 0,0 -0.08,0.18v5A0.21,0.21 0,0 0,10.89 23.8ZM11.64,19.1h1c0.66,0 1,0.29 1,0.89s-0.33,0.89 -1,0.89h-1Z"
+      android:fillColor="#428dff"/>
 </vector>
