--- a/app/src/main/res/drawable/ic_txt.xml
+++ b/app/src/main/res/drawable/ic_txt.xml
@@ -1,27 +1,10 @@
-<!--
-  ~  Copyright (C) 2023  WirelessAlien <https://github.com/WirelessAlien>
-  ~
-  ~     This program is free software: you can redistribute it and/or modify
-  ~     it under the terms of the GNU General Public License as published by
-  ~     the Free Software Foundation, either version 3 of the License, or
-  ~     any later version.
-  ~
-  ~     This program is distributed in the hope that it will be useful,
-  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
-  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-  ~     GNU General Public License for more details.
-  ~
-  ~     You should have received a copy of the GNU General Public License
-  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
-  -->
-
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="200dp"
-    android:height="200dp"
-    android:viewportWidth="512"
-    android:viewportHeight="512"
+    android:width="24.95dp"
+    android:height="31dp"
+    android:viewportWidth="24.95"
+    android:viewportHeight="31"
     android:tint="?attr/colorControlNormal">
   <path
-      android:pathData="M458,118.2L346.5,8.4C345,6.9 342.9,6 340.7,6H135c-31.1,0 -56.3,26.6 -56.3,59.4v219.2H51.3v148.6h27.4v13.4c0,32.7 25.3,59.4 56.3,59.4h269.4c31.1,0 56.3,-26.6 56.3,-59.4V124.7C460.7,122.3 459.8,119.9 458,118.2zM337.9,24.4l97,95.6h-52.8c-24.4,0 -44.2,-19.5 -44.2,-43.4V24.4zM443.7,446.6c0,22.9 -17.6,41.5 -39.3,41.5H135c-21.7,0 -39.3,-18.6 -39.3,-41.5v-13.4h187c36.5,0 66,-33.3 66,-74.3s-29.6,-74.3 -66,-74.3h-187V65.4c0,-22.9 17.6,-41.5 39.3,-41.5h185.9v52.7c0,33.8 27.4,61.3 61.2,61.3h61.6V446.6zM103.1,331.5v-10h58.5v10h-23.2v65h-12.5v-65H103.1zM169.5,321.4h14.7l15.7,27.7l15.8,-27.7h14.8l-23.1,37.2l24,37.8h-15l-16.3,-28.2l-16.3,28.2H169l23.6,-37.8L169.5,321.4zM238.3,331.5v-10h58.5v10h-23.2v65h-12.5v-65H238.3z"
-      android:fillColor="#ED1C24"/>
+      android:pathData="M24.5,31a0.5,0.5 0,0 1,-0.5 -0.5L24,8.68l-6.73,-7.68L3.5,1a2.5,2.5 0,0 0,-2.5 2.5v7a0.5,0.5 0,0 1,-1 0v-7a3.5,3.5 0,0 1,3.5 -3.5L17.68,-0l7.27,8.31L24.95,30.5A0.5,0.5 0,0 1,24.5 31ZM22.5,8.95a0.5,0.5 0,0 0,-0.5 -0.5L18.74,8.45a0.79,0.79 0,0 1,-0.79 -0.79L17.95,3.78a0.5,0.5 0,0 0,-1 0v3.86a1.79,1.79 0,0 0,1.79 1.79h3.21A0.5,0.5 0,0 0,22.5 8.95ZM2.37,16.95a0.22,0.22 0,0 0,0.2 0.11h1.24v4.48a0.23,0.23 0,0 0,0.13 0.19,0.56 0.56,0 0,0 0.3,0.07 0.6,0.6 0,0 0,0.3 -0.07,0.22 0.22,0 0,0 0.12,-0.19L4.66,17.02L5.9,17.02a0.22,0.22 0,0 0,0.2 -0.11,0.45 0.45,0 0,0 0.07,-0.27 0.43,0.43 0,0 0,-0.07 -0.25,0.22 0.22,0 0,0 -0.2,-0.1L2.57,16.29a0.21,0.21 0,0 0,-0.2 0.11,0.44 0.44,0 0,0 -0.08,0.25A0.45,0.45 0,0 0,2.37 16.95ZM6.61,21.71a0.65,0.65 0,0 0,0.36 0.12,0.34 0.34,0 0,0 0.28,-0.18l1.16,-2 1.19,2a0.29,0.29 0,0 0,0.26 0.18,0.65 0.65,0 0,0 0.37,-0.12 0.33,0.33 0,0 0,0.18 -0.27,0.32 0.32,0 0,0 -0.05,-0.16l-1.39,-2.22 1.35,-2.2a0.41,0.41 0,0 0,0.06 -0.2,0.29 0.29,0 0,0 -0.17,-0.25 0.65,0.65 0,0 0,-0.36 -0.1,0.36 0.36,0 0,0 -0.32,0.22l-1.12,1.92 -1.1,-1.92a0.36,0.36 0,0 0,-0.32 -0.22,0.69 0.69,0 0,0 -0.37,0.1 0.31,0.31 0,0 0,-0.17 0.25,0.44 0.44,0 0,0 0.07,0.2l1.34,2.2L6.5,21.24a0.37,0.37 0,0 0,-0.05 0.16A0.33,0.33 0,0 0,6.61 21.67ZM10.74,16.95a0.22,0.22 0,0 0,0.2 0.11h1.24v4.48a0.21,0.21 0,0 0,0.13 0.19,0.56 0.56,0 0,0 0.3,0.07 0.54,0.54 0,0 0,0.29 -0.07,0.21 0.21,0 0,0 0.13,-0.19L13.03,17.02h1.23A0.23,0.23 0,0 0,14.5 16.95a0.45,0.45 0,0 0,0.07 -0.27,0.43 0.43,0 0,0 -0.07,-0.25 0.24,0.24 0,0 0,-0.21 -0.1L10.94,16.33a0.23,0.23 0,0 0,-0.21 0.11,0.52 0.52,0 0,0 -0.07,0.25A0.45,0.45 0,0 0,10.74 16.95Z"
+      android:fillColor="#428dff"/>
 </vector>
