--- a/app/src/main/res/drawable/ic_zip.xml
+++ b/app/src/main/res/drawable/ic_zip.xml
@@ -1,13 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="512dp"
-    android:height="512dp"
-    android:viewportWidth="512"
-    android:viewportHeight="512"
+    android:width="24.95dp"
+    android:height="31dp"
+    android:viewportWidth="24.95"
+    android:viewportHeight="31"
     android:tint="?attr/colorControlNormal">
   <path
-      android:pathData="M458,118.2L346.5,8.4C345,6.9 342.9,6 340.7,6H135c-31.1,0 -56.3,26.6 -56.3,59.4v219.2H51.3v148.6h27.4v13.4c0,32.7 25.3,59.4 56.3,59.4h269.4c31.1,0 56.3,-26.6 56.3,-59.4V124.7C460.7,122.3 459.8,119.9 458,118.2zM337.9,24.4l97,95.6h-52.8c-24.4,0 -44.2,-19.5 -44.2,-43.4V24.4zM443.7,446.6c0,22.9 -17.6,41.5 -39.3,41.5H135c-21.7,0 -39.3,-18.6 -39.3,-41.5v-13.4h187c36.5,0 66,-33.3 66,-74.3s-29.6,-74.3 -66,-74.3h-187V65.4c0,-22.9 17.6,-41.5 39.3,-41.5h185.9v52.7c0,33.8 27.4,61.3 61.2,61.3h61.6V446.6zM121.9,331.5v-10H173v7.5l-36.7,57.5h38.1v10h-52.8v-7.8l36.6,-57.1H121.9zM190.7,396.4v-75h12.5v75H190.7zM223.2,396.4v-75h28.7c8.3,0 14.8,2.1 19.4,6.4s7,9.9 7,16.9c0,7 -2.3,12.7 -7,16.9c-4.7,4.2 -11.2,6.4 -19.4,6.4h-16.2v28.4H223.2z"
-      android:fillColor="#ED1C24"/>
-  <path
-      android:pathData="M262.4,354.2c2.3,-2.5 3.5,-5.6 3.5,-9.4c0,-3.8 -1.2,-7 -3.5,-9.5c-2.3,-2.5 -5.8,-3.8 -10.5,-3.8h-16.2v26.5h16.2C256.5,357.9 260,356.7 262.4,354.2z"
-      android:fillColor="#ED1C24"/>
+      android:pathData="M24.5,31a0.5,0.5 0,0 1,-0.5 -0.5L24,8.68l-6.73,-7.68L3.5,1a2.5,2.5 0,0 0,-2.5 2.5v7a0.5,0.5 0,0 1,-1 0v-7a3.5,3.5 0,0 1,3.5 -3.5L17.68,-0l7.27,8.31L24.95,30.5A0.5,0.5 0,0 1,24.5 31ZM22.5,9.95a0.5,0.5 0,0 0,-0.5 -0.5L18.74,9.45a0.78,0.78 0,0 1,-0.79 -0.78L17.95,4.78a0.5,0.5 0,0 0,-1 0v3.86a1.79,1.79 0,0 0,1.79 1.78h3.21A0.5,0.5 0,0 0,22.5 9.95ZM2.93,23.16h3.24a0.24,0.24 0,0 0,0.2 -0.11,0.41 0.41,0 0,0 0.08,-0.24 0.44,0.44 0,0 0,-0.08 -0.25,0.24 0.24,0 0,0 -0.2,-0.11L3.74,22.45l2.48,-4.25a0.53,0.53 0,0 0,0.1 -0.29c0,-0.15 -0.09,-0.23 -0.27,-0.23h-3a0.22,0.22 0,0 0,-0.21 0.11,0.41 0.41,0 0,0 -0.08,0.25 0.44,0.44 0,0 0,0.08 0.25,0.27 0.27,0 0,0 0.21,0.1h2.16L2.75,22.65a0.48,0.48 0,0 0,-0.08 0.28C2.67,23.08 2.75,23.16 2.93,23.16ZM7.24,23.09a0.7,0.7 0,0 0,0.3 0.07,0.73 0.73,0 0,0 0.3,-0.07 0.22,0.22 0,0 0,0.12 -0.19L7.96,17.95a0.2,0.2 0,0 0,-0.12 -0.19,0.6 0.6,0 0,0 -0.3,-0.07 0.56,0.56 0,0 0,-0.3 0.07,0.19 0.19,0 0,0 -0.13,0.19v5A0.23,0.23 0,0 0,7.24 23.09ZM9.14,23.09a0.73,0.73 0,0 0,0.3 0.07,0.66 0.66,0 0,0 0.3,-0.07 0.22,0.22 0,0 0,0.12 -0.19L9.86,21.05h1a2,2 0,0 0,1.3 -0.4,1.54 1.54,0 0,0 0.5,-1.26v-0.06a1.52,1.52 0,0 0,-0.48 -1.25,2 2,0 0,0 -1.28,-0.4L9.34,17.68a0.36,0.36 0,0 0,-0.23 0.08,0.23 0.23,0 0,0 -0.09,0.18v5A0.22,0.22 0,0 0,9.14 23.09ZM9.86,18.39h1a1,1 0,0 1,0.7 0.24,0.94 0.94,0 0,1 0.25,0.72v0.09a1,1 0,0 1,-0.25 0.73,0.92 0.92,0 0,1 -0.7,0.25h-1Z"
+      android:fillColor="#428dff"/>
 </vector>
