--- a/app/src/main/res/layout/bottom_sheet_option.xml
+++ b/app/src/main/res/layout/bottom_sheet_option.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- bottom_sheet_options.xml -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -12,7 +11,7 @@
         android:id="@+id/btnOpenWith"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Open With"
+        android:text="@string/open_with"
         android:padding="5dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
