--- a/app/src/main/res/layout/seven_z_option_dialog.xml
+++ b/app/src/main/res/layout/seven_z_option_dialog.xml
@@ -53,7 +53,7 @@
             android:layout_margin="5dp"
             app:cornerRadius="5dp"
             style="@style/Widget.Material3.Button.TonalButton"
-            android:text="Show/Hide File Paths" />
+            android:text="@string/show_hide_selected_files" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/filePathsRv"
