--- a/app/src/main/res/menu/menu_action.xml
+++ b/app/src/main/res/menu/menu_action.xml
@@ -2,23 +2,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/menu_action_select_all"
-        android:title="Select All"
-        android:icon="@drawable/ic_round_select_all"
-        app:showAsAction="never" />
+        android:id="@+id/m_archive_zip"
+        android:title="@string/create_zip"
+        app:showAsAction="ifRoom" />
+
     <item
         android:id="@+id/m_archive_7z"
-        android:title="Archive 7z"
-        android:icon="@drawable/ic_create_z"
-        app:showAsAction="always" />
-    <item
-        android:id="@+id/m_archive_zip"
-        android:title="Archive Zip"
-        android:icon="@drawable/ic_folder_zip"
-        app:showAsAction="always" />
-    <item
-        android:id="@+id/m_extract_multipart"
-        android:title="Extract Multipart"
-        android:icon="@drawable/ic_folder_zip"
+        android:title="@string/compress_sevenz"
         app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/m_archive_tar"
+        android:title="@string/compress_tar"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/menu_action_select_all"
+        android:title="@string/select_all"
+        app:showAsAction="ifRoom" />
+
 </menu>
